Fixed an issue of improper alignment in blog-item and project-item card (overflow problem from layout)

--- a/source/_scss/theme/layout/_page.scss
+++ b/source/_scss/theme/layout/_page.scss
@@ -1,6 +1,6 @@
 .page
 {
-    width: 100%;
+    /*width: 100%;*/
     margin: 0 $navbar-horiz-margin;
 }
 
