--- a/source/_scss/theme/layout/_project.scss
+++ b/source/_scss/theme/layout/_project.scss
@@ -9,5 +9,5 @@
 
 .projects
 {
-    margin: 0 $main-content-margin;
+    /*margin: 0 $main-content-margin;*/
 }
