--- a/source/_scss/theme/pages/_projects.scss
+++ b/source/_scss/theme/pages/_projects.scss
@@ -5,7 +5,14 @@
     position: relative;
     @include from($laptop)
     {
-        margin: 0.5rem 0.5rem 0.5rem 0;
+        &:nth-child(odd)
+        {
+            margin: 0.5rem 0.5rem 0.5rem 0;
+        }
+        &:nth-child(even)
+        {
+            margin: 0.5rem 0 0.5rem 0.5rem;
+        }
         width: 49%;
         float: left;
         box-sizing: border-box;
